fix: export env by default

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,5 +22,10 @@ jobs:
           token: ${{ secrets.GITCODE_TOKEN }}
 
       - name: Verify setup
+        shell: bash
         run: |
           cjc --version
+          mkdir cjbuild
+          cd cjbuild
+          cjpm init
+          cjpm run
