--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "lint": "eslint",
     "lint:fix": "eslint --fix",
     "dev": "tsx src/index.ts",
-    "build": "ncc build -m -e debug -o dist src/index.ts"
+    "build": "rollup --config rollup.config.ts --configPlugin @rollup/plugin-typescript"
   },
   "devDependencies": {
     "@actions/cache": "^3.3.0",
@@ -23,10 +23,15 @@
     "@actions/io": "^1.1.3",
     "@actions/tool-cache": "^2.0.1",
     "@antfu/eslint-config": "^3.11.2",
-    "@tsconfig/node20": "^20.1.4",
+    "@rollup/plugin-commonjs": "^28.0.1",
+    "@rollup/plugin-node-resolve": "^15.3.0",
+    "@rollup/plugin-terser": "^0.4.4",
+    "@rollup/plugin-typescript": "^12.1.1",
+    "@tsconfig/node22": "^22.0.0",
     "@types/node": "^22.10.1",
-    "@vercel/ncc": "^0.38.3",
     "eslint": "^9.16.0",
+    "rollup": "^4.28.0",
+    "rollup-plugin-visualizer": "^5.12.0",
     "tsx": "^4.19.2",
     "typescript": "^5.7.2"
   }
