--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@actions/tool-cache": "^2.0.2",
     "@antfu/eslint-config": "^4.1.1",
     "@rollup/plugin-commonjs": "^28.0.2",
+    "@rollup/plugin-json": "^6.1.0",
     "@rollup/plugin-node-resolve": "^16.0.0",
     "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^12.1.2",
