--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -6,6 +6,9 @@ on:
       - 'v[0-9]+.[0-9]+.[0-9]+'
   workflow_dispatch:
 
+permissions:
+  contents: write
+
 jobs:
   sync-tags:
     runs-on: ubuntu-latest
