--- a/action.yml
+++ b/action.yml
@@ -10,9 +10,9 @@ inputs:
     required: false
     default: "canary"
   version:
-    description: 需要安装的仓颉版本，例如 0.53.13, 0.58.3，使用 main 表示最新版
+    description: 需要安装的仓颉版本，例如 0.53.13, 0.58.3，使用 latest 表示最新版，使用 auto 表明尝试从 cjpm.toml 中获取版本，如果没有则使用 latest
     required: false
-    default: "main"
+    default: "auto"
   token:
     description: 访问仓颉 gitcode 仓库的 token，使用 canary 通道时必须提供
     required: false
