--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "setup-cangjie",
-  "version": "1.6.1",
+  "version": "1.6.2",
   "private": true,
   "packageManager": "pnpm@10.10.0",
   "description": "Setup Cangjie on GitHub Actions",
@@ -20,6 +20,7 @@
   "devDependencies": {
     "@actions/cache": "^4.0.3",
     "@actions/core": "^1.11.1",
+    "@actions/glob": "^0.5.0",
     "@actions/http-client": "^2.2.3",
     "@actions/io": "^1.1.3",
     "@actions/tool-cache": "^2.0.2",
@@ -34,6 +35,7 @@
     "eslint": "^9.25.1",
     "rollup": "^4.40.1",
     "rollup-plugin-visualizer": "^5.14.0",
+    "smol-toml": "^1.3.4",
     "tsx": "^4.19.4",
     "typescript": "^5.8.3"
   },
