--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [macos-13, macos-14, windows-latest, ubuntu-latest, ubuntu-24.04-arm]
+        os: [macos-14, windows-latest, ubuntu-latest, ubuntu-24.04-arm]
         target:
           - channel: canary
             version: 0.58.3
