--- a/action.yml
+++ b/action.yml
@@ -6,20 +6,13 @@ branding:
   color: blue
 inputs:
   channel:
-    description: 需要安装的仓颉版本通道，例如 canary, sts
+    description: 需要安装的仓颉版本通道，例如 lts, sts
     required: false
-    default: canary
+    default: lts
   version:
     description: 需要安装的仓颉版本，例如 0.53.13, 0.58.3，使用 latest 表示最新版，使用 auto 表明尝试从 cjpm.toml 中获取版本，如果没有则使用 latest
     required: false
     default: auto
-  token:
-    description: 访问仓颉 gitcode 仓库的 token，使用 canary 通道时必须提供
-    required: false
-  tool-cache:
-    description: 是否缓存仓颉 SDK
-    required: false
-    default: "true"
   archive-path:
     description: 下载的 .zip/.tar.gz 文件的存储路径
     required: false
