--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     ]
   },
   "dependencies": {
-    "@tsconfig/node22": "^22.0.2"
+    "@tsconfig/node22": "^22.0.2",
+    "source-map-support": "^0.5.21"
   }
 }
