--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,6 +23,8 @@ jobs:
             version: 1.0.0
           - channel: lts
             version: latest
+          - channel: nightly
+            version: 1.1.0-alpha.20260106020001
         archive-path: ["", archive.bin]
     steps:
       - uses: actions/checkout@v6
